infrastructure/auth/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keycloak.relyq.dev
    external-dns.alpha.kubernetes.io/dns: pihole
spec:
  hostnames:
    - keycloak.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: keycloak
          kind: Service
          port: 80
  parentRefs:
    - name: gateway-internal
      namespace: traefik
      sectionName: websecure
